objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Community Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DSS PO Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Invoice</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Global Action</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>L2I_Aircraft_Order</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PT Customer Purchase Order 1</fullName>
        <description>Used for managing the customer purchase order process, Gate 1 (New Status)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PT Customer Purchase Order%2E1%2E1</fullName>
        <description>Used for managing the customer purchase order process Gate 1.1 (In Progress Status)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Order</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PT Customer Purchase Order%2E2</fullName>
        <description>Used for managing the customer purchase order process, Gate 2</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Ordered</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PT Customer Purchase Order%2E3</fullName>
        <description>Used for managing the customer purchase order process, Gate 3</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Order Closed</fullName>
        </values>
        <values>
            <fullName>Ordered</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Aircraft_Activation_Date_from_DSL__c</fullName>
        <formula>IF(NOT(ISBLANK(L2I_Delivery_Schedule_Line__r.PT_InService_Date__c )),L2I_Delivery_Schedule_Line__r.PT_InService_Date__c, TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Activation Date from DSL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Award_Date__c</fullName>
        <description>Source Sales Opportunity Anticipated Award Date</description>
        <formula>TEXT(L2I_Original_Sales_Opportunity__r.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source Sales Opportunity Anticipated Award Date</inlineHelpText>
        <label>Anticipated Award Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Group_s_Association__c</fullName>
        <description>Business Unit Group Association</description>
        <inlineHelpText>Business Unit Group Association</inlineHelpText>
        <label>BU Group(s) Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>IFC</fullName>
                </value>
                <value>
                    <fullName>IFS</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body of the email from Email Repair Shop button</description>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bookings__c</fullName>
        <description>Source Sales Opportunity Bookings Amount</description>
        <formula>Text( L2I_Original_Sales_Opportunity__r.L2I_Bookings_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source Sales Opportunity Bookings Amount</inlineHelpText>
        <label>Bookings Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Global Action Due Date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_AC_Delivery_Date__c</fullName>
        <description>Source Sales Opportunity First AC Delivery Date</description>
        <formula>Text(L2I_Original_Sales_Opportunity__r.L2I_First_Delivery_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source Sales Opportunity First AC Delivery Date</inlineHelpText>
        <label>First AC Delivery Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Team_s_Association__c</fullName>
        <label>Functional Team(s) Association</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C360 Enhancement or Dev Request</fullName>
                </value>
                <value>
                    <fullName>CDM (Tech Pubs)</fullName>
                </value>
                <value>
                    <fullName>CSO</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fit Check</fullName>
                </value>
                <value>
                    <fullName>GTO - Certification</fullName>
                </value>
                <value>
                    <fullName>GTO - Customer Performance Center (CPC)</fullName>
                </value>
                <value>
                    <fullName>GTO - Global Network Operations Engineering (GNOE)</fullName>
                </value>
                <value>
                    <fullName>GTO - Hardware Engineering</fullName>
                </value>
                <value>
                    <fullName>GTO - Software Engineering</fullName>
                </value>
                <value>
                    <fullName>GTO - System Installation Engineering (SIE)</fullName>
                </value>
                <value>
                    <fullName>Human Resources (HR)</fullName>
                </value>
                <value>
                    <fullName>Information Technology (IT)</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing - Collateral Request</fullName>
                </value>
                <value>
                    <fullName>Marketing - Communications</fullName>
                </value>
                <value>
                    <fullName>Marketing - Creative Team</fullName>
                </value>
                <value>
                    <fullName>Marketing - Customer Demo Request and/or Support</fullName>
                </value>
                <value>
                    <fullName>Marketing - Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing - Product Marketing</fullName>
                </value>
                <value>
                    <fullName>Material Planning</fullName>
                </value>
                <value>
                    <fullName>MCS</fullName>
                </value>
                <value>
                    <fullName>OEM Airbus</fullName>
                </value>
                <value>
                    <fullName>OEM Boeing</fullName>
                </value>
                <value>
                    <fullName>Office of Ethics &amp; Compliance (OEC)</fullName>
                </value>
                <value>
                    <fullName>Osaka</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Product Line Management – DS</fullName>
                </value>
                <value>
                    <fullName>Product Line Management – IFC</fullName>
                </value>
                <value>
                    <fullName>Product Line Management – IFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Action_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected when an action becomes a global need across all regions</description>
        <inlineHelpText>To be selected when an action becomes a global need across all regions</inlineHelpText>
        <label>Global Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Action_Type__c</fullName>
        <description>Global Action Type</description>
        <label>Global Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Deliverable</fullName>
                </value>
                <value>
                    <fullName>Strategic Commitment</fullName>
                </value>
                <value>
                    <fullName>Support Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Action__c</fullName>
        <description>Global Action Record Number</description>
        <displayFormat>GA-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Global Action Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IFE_Doc_Type__c</fullName>
        <label>Doc Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Document_Discrepancy__c</fullName>
        <label>Document Discrepancy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IFE_Program_Number__c</fullName>
        <label>Program Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Repair_Shop__c</fullName>
        <label>Repair Shop</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Revision__c</fullName>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Specific_Location__c</fullName>
        <inlineHelpText>Specific Location in Document - Section/Page</inlineHelpText>
        <label>Specific Location in Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Suggested_Change__c</fullName>
        <label>Suggested Change / Correction:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IFE_System_or_LRU_Part_Number__c</fullName>
        <label>IFE System or LRU Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_correction_released_by__c</fullName>
        <label>Must have correction released by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Closed_Final_Resolution__c</fullName>
        <description>Closed Status Final Resolution Comments</description>
        <inlineHelpText>If Status is Closed, Final Resolution Comments</inlineHelpText>
        <label>If Closed, Final Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used to identify if a Case originated from another Case record</description>
        <label>Is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_ASA_Record_Count__c</fullName>
        <label>ASA Record Count</label>
        <summaryForeignKey>L2I_ASA__c.Aircraft_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Activate_ASA_Record_Count__c</fullName>
        <label>Activate ASA Record Count</label>
        <summaryFilterItems>
            <field>L2I_ASA__c.Action__c</field>
            <operation>equals</operation>
            <value>Activate</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_ASA__c.Aircraft_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>L2I_Aircraft__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Allow_To_Reprocess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow To Reprocess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Blanket_PO_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A blanket purchase order – indicates that a customer has provided a single PO to cover a series of recurring invoices/deliveries</inlineHelpText>
        <label>Blanket PO Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Cancel_ASA_Record_Count__c</fullName>
        <label>Cancel ASA Record Count</label>
        <summaryFilterItems>
            <field>L2I_ASA__c.Action__c</field>
            <operation>equals</operation>
            <value>Cancel</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_ASA__c.Aircraft_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Case_Process__c</fullName>
        <label>Case Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Deactivate_ASA_Record_Count__c</fullName>
        <label>Deactivate ASA Record Count</label>
        <summaryFilterItems>
            <field>L2I_ASA__c.Action__c</field>
            <operation>equals</operation>
            <value>Deactivate</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_ASA__c.Aircraft_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Deactivation_Date__c</fullName>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_Schedule_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Schedule Line</label>
        <referenceTo>L2I_DSL__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_End_User_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Customer PO Case process</description>
        <label>End User Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>L2I_Site__c.L2I_Site_Use_Code__c</field>
                <operation>equals</operation>
                <value>Deliver_To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Cases (End User Location)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used as part of the Customer PO Case process</description>
        <label>End User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.PT_Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2I_End_User_Location__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (End User)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_ExternalRequestID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalRequestID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_ExternalTaskID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalTaskID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_Name__c</fullName>
        <formula>L2I_Order__r.L2I_Feature_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (Opportunity Lookup to Opportunity)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Original_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Opportunity_Recordtype_Name__c</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Category_2__c</fullName>
        <label>Product Category 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Category__c</fullName>
        <formula>L2I_Order__r.L2I_Product_Category_2__c</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Program_Number__c</fullName>
        <formula>L2I_Order__r.L2I_Program_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Related_Order__c</fullName>
        <label>xxRelated Order</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Routing_Path__c</fullName>
        <label>Routing Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSL</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_SCMDB_Release_Date__c</fullName>
        <label>SCMDB Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_System_date__c</fullName>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_Tail_Number__c</fullName>
        <formula>L2I_Aircraft__r.L2I_Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tail Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P3_Average__c</fullName>
        <description>Source Sales Opportunity&#39;s P3 (%) Field Value</description>
        <formula>L2I_Original_Sales_Opportunity__r.L2I_P3_Average_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source Sales Opportunity&#39;s P3 (%) Field Value</inlineHelpText>
        <label>P3 (Average %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Case_Type__c</fullName>
        <label>PO Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>IFEC</fullName>
                    <default>true</default>
                    <label>IFEC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Bill_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site (Address) for parts billing</description>
        <label>Bill to Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value in Bill to Location does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>L2I_Site__c.PT_AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Site_Use_Code__c</field>
                <operation>equals</operation>
                <value>Bill_To</value>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Cases (Bill to Location)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_CR_Number__c</fullName>
        <label>CR Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Fob_Point_Code__c</fullName>
        <formula>Case(PT_Program__r.Sales_Opportunity__r.L2I_Parent_Opportunity__r.L2I_Shipping_Incoterm__c,
&quot;EXW – Ex Works&quot;, &quot;EXW&quot;,
&quot;FCA – Free Carrier&quot;, &quot;FCA&quot;,
&quot;CPT – Carriage Paid to&quot;, &quot;CPT&quot;,
&quot;CIP – Carriage and Insurance&quot;, &quot;CIP&quot;,
&quot;DPU – Delivered at Place Unloaded&quot;, &quot;DPU&quot;,
&quot;DAP – Delivered at Place&quot;, &quot;DAP&quot;,
&quot;DDP – Delivery Duty Paid&quot;, &quot;DDP&quot;,
&quot;FOB – Free on Board&quot;, &quot;FOB&quot;,
Null)</formula>
        <label>Fob Point Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Freight_Terms_Code__c</fullName>
        <formula>Case(PT_Freight_Terms__c,
&quot;Bill Third Party&quot;, &quot;3&quot;,
&quot;Bill 3rd Party (old)&quot;, &quot;BILL 3rd PARTY&quot;,
&quot;Collect&quot;, &quot;C&quot;,
&quot;Collect (Old)&quot;, &quot;COLLECT&quot;,
&quot;Counter to Counter Shipment (old)&quot;, &quot;COUNTER TO COUNTER&quot;,
&quot;Prepay &amp; Add with cost conversion (old)&quot;, &quot;DUECOST&quot;,
&quot;Prepay &amp; Add (old)&quot;, &quot;Due&quot;,
&quot;PA Pays Freight (old)&quot;, &quot;PREPAID&quot;,
&quot;Prepaid, Add to Invoice&quot;, &quot;PREPAID ADD TO INVOICE&quot;,
&quot;PA Pays Freight, Add to Customer Invoice (old)&quot;, &quot;PREPAY AND ADD&quot;,
&quot;Prepaid (old)&quot;, &quot;Paid&quot;,
&quot;Prepaid&quot;, &quot;S&quot;,
&quot;To Be Determined (old)&quot;, &quot;TBD&quot;,
&quot;Third Party Billing (old)&quot;, &quot;THIRD_PARTY&quot;,
Null)</formula>
        <label>Freight Terms Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Freight_Terms__c</fullName>
        <label>Freight Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Third Party</fullName>
                </value>
                <value>
                    <fullName>Bill 3rd Party (old)</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
                <value>
                    <fullName>Collect (Old)</fullName>
                </value>
                <value>
                    <fullName>Counter to Counter Shipment (old)</fullName>
                </value>
                <value>
                    <fullName>Prepay &amp; Add with cost conversion (old)</fullName>
                </value>
                <value>
                    <fullName>Prepay &amp; Add (old)</fullName>
                </value>
                <value>
                    <fullName>PA Pays Freight (old)</fullName>
                </value>
                <value>
                    <fullName>Prepaid, Add to Invoice</fullName>
                </value>
                <value>
                    <fullName>PA Pays Freight, Add to Customer Invoice (old)</fullName>
                </value>
                <value>
                    <fullName>Prepaid (old)</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>To Be Determined (old)</fullName>
                </value>
                <value>
                    <fullName>Third Party Billing (old)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_INCOTERMS__c</fullName>
        <formula>IF( 
				ISPICKVAL(PO_Case_Type__c, &quot;IFEC&quot;) ,TEXT(PT_Program__r.Sales_Opportunity__r.L2I_Parent_Opportunity__r.L2I_Shipping_Incoterm__c), 
 TEXT(L2I_Order__r.Opportunity.L2I_Parent_Opportunity__r.L2I_Shipping_Incoterm__c ))</formula>
        <label>INCOTERMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Order_Type_Context__c</fullName>
        <label>Order Type Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eval/Loan Order</fullName>
                </value>
                <value>
                    <fullName>Invoice Only Order</fullName>
                </value>
                <value>
                    <fullName>Irvine Direct - S/W</fullName>
                </value>
                <value>
                    <fullName>MILESTONE</fullName>
                </value>
                <value>
                    <fullName>NRE Service</fullName>
                </value>
                <value>
                    <fullName>Standard Stock Order</fullName>
                </value>
                <value>
                    <fullName>TECH PUB ORDER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Order_Type_ID__c</fullName>
        <formula>CASE(PT_Order_Type_Context__c,
&quot;Eval/Loan Order&quot;, 1003,
&quot;Invoice Only Order&quot;, 1006,
&quot;Irvine Direct - S/W&quot;, 1045,
&quot;MILESTONE&quot;, 1837,
&quot;NRE Service&quot;, 2277,
&quot;Standard Stock Order&quot;, 1017,
&quot;TECH PUB ORDER&quot;, 2337,
Null)</formula>
        <label>Order Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_PO_Received_Date__c</fullName>
        <label>PO Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Packing_Instructions__c</fullName>
        <label>Packing Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Payment_Term__c</fullName>
        <formula>TEXT(Account.L2I_Payment_Term__c)</formula>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program_Id__c</fullName>
        <formula>PT_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Id</label>
        <type>Text</type>
    </fields>
</CustomObject>